--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -195,7 +195,7 @@ jobs:
 
       - name: Build sketch-paths
         run: >
-          echo "sketch_paths=$(
+          echo "sketch_paths=\"$(
             if [ ${{ matrix.device.available-flash-kB }} -ge 8 ];
             then
               echo '${{ env.available-flash-8kB-sketch-paths }}${{ env.available-flash-4kB-sketch-paths }}${{ env.available-flash-2kB-sketch-paths }}'
@@ -205,7 +205,7 @@ jobs:
             else
               echo '${{ env.available-flash-2kB-sketch-paths }}'
             fi
-          )" >> $GITHUB_ENV
+          )\"" >> $GITHUB_ENV
 
       # See: https://github.com/arduino/compile-sketches/README.md
 
