--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -199,7 +199,7 @@ jobs:
             if [ ${{ matrix.device.available-flash-kB }} -ge 8 ];
             then
               echo '${{ env.available-flash-8kB-sketch-paths }}${{ env.available-flash-4kB-sketch-paths }}${{ env.available-flash-2kB-sketch-paths }}'
-            elif [ matrix.device.available-flash-kB -ge 4 ]
+            elif [ ${{ matrix.device.available-flash-kB }} -ge 4 ]
             then
               echo '${{ env.available-flash-4kB-sketch-paths }}${{ env.available-flash-2kB-sketch-paths }}'
             else
