--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -194,13 +194,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build sketch-paths > 8kb
-        if:  ${{ matrix.device.available-flash-kB >= 7.5 }}
+        if: ${{ matrix.device.available-flash-kB >= 7.5 }}
         env:
           sketch_path: |
             ${{ env.available-flash-8kB-sketch-paths }}
             ${{ env.available-flash-4kB-sketch-paths }}
             ${{ env.available-flash-2kB-sketch-paths }}
-        run: echo 'sketch path: $sketch_path'
+        run: >
+          echo 'sketch path: $sketch_path'
+
       # See: https://github.com/arduino/compile-sketches/README.md
 
       - name: Compile examples (all default)
