--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -58,136 +58,171 @@ jobs:
         device:
           - name: attinyx4:chip=84
             available-flash-kB: 8
-        # device:
-        #   - attinyx4:chip=84
-        #   - attinyx4:chip=44
-        #   - attinyx4:chip=24
-        #   - attinyx41:chip=841
-        #   - attinyx41:chip=441
-        #   - attinyx5:chip=85
-        #   - attinyx5:chip=45
-        #   - attinyx5:chip=25
-        #   - attinyx61:chip=861
-        #   - attinyx61:chip=461
-        #   - attinyx61:chip=261
-        #   - attinyx7:chip=167
-        #   - attinyx7:chip=87
-        #   - attinyx8:chip=88
-        #   - attinyx8:chip=48
-        #   - attiny1634
-        #   - attinyx313:chip=4313
-        #   - attinyx313:chip=2313a
-        #   - attiny828
-        #   - attiny43u
-        #   - attiny26
+          - name: attinyx4:chip=84
+            available-flash-kB: 8
+          - name: attinyx4:chip=44
+            available-flash-kB: 4
+          - name: attinyx4:chip=24
+            available-flash-kB: 2
+          - name: attinyx41:chip=841
+            available-flash-kB: 8
+          - name: attinyx41:chip=441
+            available-flash-kB: 4
+          - name: attinyx5:chip=85
+            available-flash-kB: 8
+          - name: attinyx5:chip=45
+            available-flash-kB: 4
+          - name: attinyx5:chip=25
+            available-flash-kB: 2
+          - name: attinyx61:chip=861
+            available-flash-kB: 8
+          - name: attinyx61:chip=461
+            available-flash-kB: 4
+          - name: attinyx61:chip=261
+            available-flash-kB: 2
+          - name: attinyx7:chip=167
+            available-flash-kB: 16
+          - name: attinyx7:chip=87
+            available-flash-kB: 8
+          - name: attinyx8:chip=88
+            available-flash-kB: 8
+          - name: attinyx8:chip=48
+            available-flash-kB: 4
+          - name: attiny1634
+            available-flash-kB: 16
+          - name: attinyx313:chip=4313
+            available-flash-kB: 4
+          - name: attinyx313:chip=2313a
+            available-flash-kB: 2
+          - name: attiny828
+            available-flash-kB: 8
+          - name: attiny43u
+            available-flash-kB: 4
+          - name: attiny26
+            available-flash-kB: 2
         soft-serial:
-          - "softserial=enable"
-        #   - softserial=txonly
-
+          - ""
+          - softserial=enable
+          - softserial=txonly
 
         # Filter out these matrix combinations
-        # exclude:
-        #   - soft-serial: softserial=enable
-        #     device: attinyx41:chip=841
-        #   - soft-serial: softserial=enable
-        #     device: attinyx41:chip=441
-        #   - soft-serial: softserial=txonly
-        #     device: attinyx41:chip=841
-        #   - soft-serial: softserial=txonly
-        #     device: attinyx41:chip=441
-        #   - soft-serial: softserial=enable
-        #     device: attinyx7:chip=87
-        #   - soft-serial: softserial=enable
-        #     device: attinyx7:chip=167
-        #   - soft-serial: softserial=txonly
-        #     device: attinyx7:chip=87
-        #   - soft-serial: softserial=txonly
-        #     device: attinyx7:chip=167
-        #   - soft-serial: softserial=enable
-        #     device: attinyx313:chip=4313
-        #   - soft-serial: softserial=enable
-        #     device: attinyx313:chip=2313a
-        #   - soft-serial: softserial=txonly
-        #     device: attinyx313:chip=4313
-        #   - soft-serial: softserial=txonly
-        #     device: attinyx313:chip=2313a
-        #   - soft-serial: softserial=enable
-        #     device: attiny1634
-        #   - soft-serial: softserial=enable
-        #     device: attiny1634
-        #   - soft-serial: softserial=txonly
-        #     device: attiny828
-        #   - soft-serial: softserial=txonly
-        #     device: attiny828
-        #   - soft-serial:
-        #     device: attinyx4:chip=84
-        #   - soft-serial:
-        #     device: attinyx4:chip=44
-        #   - soft-serial:
-        #     device: attinyx4:chip=24
-        #   - soft-serial:
-        #     device: attinyx5:chip=85
-        #   - soft-serial:
-        #     device: attinyx5:chip=45
-        #   - soft-serial:
-        #     device: attinyx5:chip=25
-        #   - soft-serial:
-        #     device: attinyx61:chip=861
-        #   - soft-serial:
-        #     device: attinyx61:chip=461
-        #   - soft-serial:
-        #     device: attinyx61:chip=261
-        #   - soft-serial:
-        #     device: attinyx8:chip=88
-        #   - soft-serial:
-        #     device: attinyx8:chip=48
-        #   - soft-serial:
-        #     device: attiny43u
-        #   - soft-serial:
-        #     device: attiny26
-        # include:
-          # - device: attiny1634
-          #   available-flash-kB: 16
-          # - device: attinyx7,chip=167
-          #   available-flash-kB: 16
-          # - device: attinyx7,chip=87
-          #   available-flash-kB: 8
-          # - device: attinyx4,chip=84
-          #   available-flash-kB: 8
-          # - device: attinyx4,chip=44
-          #   available-flash-kB: 4
-          # - device: attinyx4,chip=24
-          #   available-flash-kB: 2
-          # - device: attinyx41,chip=841
-          #   available-flash-kB: 8
-          # - device: attinyx41,chip=441
-          #   available-flash-kB: 4
-          # - device: attinyx5,chip=85
-          #   available-flash-kB: 5
-          # - device: attinyx5,chip=45
-          #   available-flash-kB: 4
-          # - device: attinyx5,chip=25
-          #   available-flash-kB: 2
-          # - device: attinyx61,chip=861
-          #   available-flash-kB: 8
-          # - device: attinyx61,chip=461
-          #   available-flash-kB: 4
-          # - device: attinyx61,chip=261
-          #   available-flash-kB: 2
-          # - device: attinyx8,chip=88
-          #   available-flash-kB: 8
-          # - device: attinyx8,chip=48
-          #   available-flash-kB: 4
-          # - device: attinyx313,chip=4313
-          #   available-flash-kB: 4
-          # - device: attinyx313,chip=2313a
-          #   available-flash-kB: 2
-          # - device: attiny828
-          #   available-flash-kB: 8
-          # - device: attiny43u
-          #   available-flash-kB: 4
-          # - device: attiny26
-          #   available-flash-kB: 2
+        exclude:
+          - soft-serial: softserial=enable
+            device:
+              - name: attinyx41:chip=841
+                available-flash-kB: 8
+          - soft-serial: softserial=txonly
+            device:
+              - name: attinyx41:chip=841
+                available-flash-kB: 8
+          - soft-serial: softserial=enable
+            device:
+              - name: attinyx41:chip=441
+                available-flash-kB: 4
+          - soft-serial: softserial=txonly
+            device:
+              - name: attinyx41:chip=441
+                available-flash-kB: 4
+          - soft-serial: softserial=enable
+            device:
+              - name: attinyx7:chip=167
+                available-flash-kB: 16
+          - soft-serial: softserial=txonly
+            device:
+              - name: attinyx7:chip=167
+                available-flash-kB: 16
+          - soft-serial: softserial=enable
+            device:
+              - name: attinyx7:chip=87
+                available-flash-kB: 8
+          - soft-serial: softserial=txonly
+            device:
+              - name: attinyx7:chip=87
+                available-flash-kB: 8
+          - soft-serial: softserial=enable
+            device:
+              - name: attinyx313:chip=4313
+                available-flash-kB: 4
+          - soft-serial: softserial=txonly
+            device:
+              - name: attinyx313:chip=4313
+                available-flash-kB: 4
+          - soft-serial: softserial=enable
+            device:
+              - name: attinyx313:chip=2313a
+                available-flash-kB: 2
+          - soft-serial: softserial=txonly
+            device:
+              - name: attinyx313:chip=2313a
+                available-flash-kB: 2
+          - soft-serial: softserial=enable
+            device:
+              - name: attiny1634
+                available-flash-kB: 16
+          - soft-serial: softserial=txonly
+            device:
+              - name: attiny1634
+                available-flash-kB: 16
+          - soft-serial: softserial=enable
+            device:
+              - name: attiny828
+                available-flash-kB: 8
+          - soft-serial: softserial=txonly
+            device:
+              - name: attiny828
+                available-flash-kB: 8
+          - soft-serial: ""
+            device:
+              - name: attinyx4:chip=84
+                available-flash-kB: 8
+          - soft-serial: ""
+            device:
+              - name: attinyx4:chip=44
+                available-flash-kB: 4
+          - soft-serial: ""
+            device:
+              - name: attinyx4:chip=24
+                available-flash-kB: 2
+          - soft-serial: ""
+            device:
+              - name: attinyx5:chip=85
+                available-flash-kB: 8
+          - soft-serial: ""
+            device:
+              - name: attinyx5:chip=45
+                available-flash-kB: 4
+          - soft-serial: ""
+            device:
+              - name: attinyx5:chip=25
+                available-flash-kB: 2
+          - soft-serial: ""
+            device:
+              - name: attinyx61:chip=861
+                available-flash-kB: 8
+          - soft-serial: ""
+            device:
+              - name: attinyx61:chip=461
+                available-flash-kB: 4
+          - soft-serial: ""
+            device:
+              - name: attinyx61:chip=261
+                available-flash-kB: 2
+          - soft-serial: ""
+            device:
+              - name: attinyx8:chip=88
+                available-flash-kB: 8
+          - soft-serial: ""
+            device:
+              - name: attinyx8:chip=48
+                available-flash-kB: 4
+          - soft-serial: ""
+            device:
+              - name: attiny43u
+                available-flash-kB: 4
+          - soft-serial: ""
+            device:
+              - name: attiny26
+                available-flash-kB: 2
 
     steps:
       - name: Checkout repository
@@ -196,52 +231,52 @@ jobs:
       - name: Build sketch-paths >= 8kb
         if: ${{ matrix.device.available-flash-kB >= 7.5 }}
         env:
-          sketch_path: |
+          job-sketch-paths: |
             ${{ env.available-flash-8kB-sketch-paths }}
             ${{ env.available-flash-4kB-sketch-paths }}
             ${{ env.available-flash-2kB-sketch-paths }}
         run: >
-          echo "sketch path: $sketch_path"
+          echo "sketch paths: $job-sketch-paths"
 
       - name: Build sketch-paths >= 4kb
         if: ${{ matrix.device.available-flash-kB >= 4 }}
         env:
-          sketch_path: |
+          job-sketch-paths: |
             ${{ env.available-flash-4kB-sketch-paths }}
             ${{ env.available-flash-2kB-sketch-paths }}
         run: >
-          echo "sketch path: $sketch_path"
+          echo "sketch paths: $job-sketch-paths"
 
       - name: Build sketch-paths >= 2kb
         if: ${{ matrix.device.available-flash-kB >= 4 }}
         env:
-          sketch_path: |
+          job-sketch-paths: |
             ${{ env.available-flash-2kB-sketch-paths }}
         run: >
-          echo "sketch path: $sketch_path"
+          echo "sketch paths: $job-sketch-paths"
 
       - name: Build fqbn with soft serial
         if: ${{ matrix.soft-serial != 0 }}
         env:
-          fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m,${{ matrix.soft-serial }}
+          device-fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m,${{ matrix.soft-serial }}
         run: >
-          echo "fqbn: $fqbn"
+          echo "fqbn: $device-fqbn"
 
       - name: Build fqbn without soft serial
         if: ${{ matrix.soft-serial == 0}}
         env:
-          fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m
+          device-fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m
         run: >
-           echo "fqbn: $fqbn"
+           echo "fqbn: $device-fqbn"
 
       # See: https://github.com/arduino/compile-sketches/README.md
 
       - name: Compile examples (all default)
         uses: arduino/compile-sketches@main
         with:
-          fqbn: ${{ env.fqbn }}
+          fqbn: ${{ env.job-fqbn }}
           sketch-paths: |
-            ${{ env.sketch_paths }}
+            ${{ env.job-sketch-paths }}
           platforms: |
             # Install ATTinyCore via Boards Manager for the toolchain
             - source-url: http://drazzy.com/package_drazzy.com_index.json
