--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -58,48 +58,48 @@ jobs:
         device:
           - name: attinyx4:chip=84
             available-flash-kB: 8
-          - name: attinyx4:chip=84
-            available-flash-kB: 8
-          - name: attinyx4:chip=44
-            available-flash-kB: 4
-          - name: attinyx4:chip=24
-            available-flash-kB: 2
-          - name: attinyx41:chip=841
-            available-flash-kB: 8
-          - name: attinyx41:chip=441
-            available-flash-kB: 4
-          - name: attinyx5:chip=85
-            available-flash-kB: 8
-          - name: attinyx5:chip=45
-            available-flash-kB: 4
-          - name: attinyx5:chip=25
-            available-flash-kB: 2
-          - name: attinyx61:chip=861
-            available-flash-kB: 8
-          - name: attinyx61:chip=461
-            available-flash-kB: 4
-          - name: attinyx61:chip=261
-            available-flash-kB: 2
-          - name: attinyx7:chip=167
-            available-flash-kB: 16
-          - name: attinyx7:chip=87
-            available-flash-kB: 8
-          - name: attinyx8:chip=88
-            available-flash-kB: 8
-          - name: attinyx8:chip=48
-            available-flash-kB: 4
-          - name: attiny1634
-            available-flash-kB: 16
-          - name: attinyx313:chip=4313
-            available-flash-kB: 4
-          - name: attinyx313:chip=2313a
-            available-flash-kB: 2
-          - name: attiny828
-            available-flash-kB: 8
-          - name: attiny43u
-            available-flash-kB: 4
-          - name: attiny26
-            available-flash-kB: 2
+          # - name: attinyx4:chip=84
+          #   available-flash-kB: 8
+          # - name: attinyx4:chip=44
+          #   available-flash-kB: 4
+          # - name: attinyx4:chip=24
+          #   available-flash-kB: 2
+          # - name: attinyx41:chip=841
+          #   available-flash-kB: 8
+          # - name: attinyx41:chip=441
+          #   available-flash-kB: 4
+          # - name: attinyx5:chip=85
+          #   available-flash-kB: 8
+          # - name: attinyx5:chip=45
+          #   available-flash-kB: 4
+          # - name: attinyx5:chip=25
+          #   available-flash-kB: 2
+          # - name: attinyx61:chip=861
+          #   available-flash-kB: 8
+          # - name: attinyx61:chip=461
+          #   available-flash-kB: 4
+          # - name: attinyx61:chip=261
+          #   available-flash-kB: 2
+          # - name: attinyx7:chip=167
+          #   available-flash-kB: 16
+          # - name: attinyx7:chip=87
+          #   available-flash-kB: 8
+          # - name: attinyx8:chip=88
+          #   available-flash-kB: 8
+          # - name: attinyx8:chip=48
+          #   available-flash-kB: 4
+          # - name: attiny1634
+          #   available-flash-kB: 16
+          # - name: attinyx313:chip=4313
+          #   available-flash-kB: 4
+          # - name: attinyx313:chip=2313a
+          #   available-flash-kB: 2
+          # - name: attiny828
+          #   available-flash-kB: 8
+          # - name: attiny43u
+          #   available-flash-kB: 4
+          # - name: attiny26
+          #   available-flash-kB: 2
         soft-serial:
           - ""
           - softserial=enable
@@ -260,21 +260,21 @@ jobs:
         env:
           job-fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m,${{ matrix.soft-serial }}
         run: >
-          echo "fqbn: $job-fqbn"
+          echo "fqbn: ${job-fqbn}"
 
       - name: Build fqbn without soft serial
         if: ${{ matrix.soft-serial == 0}}
         env:
           job-fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m
         run: >
-           echo "fqbn: $job-fqbn"
+           echo "fqbn: ${job-fqbn}"
 
       # See: https://github.com/arduino/compile-sketches/README.md
 
       - name: Compile examples (all default)
         uses: arduino/compile-sketches@main
         with:
-          fqbn: ${{ env.job-fqbn }}
+          fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m,${{ matrix.soft-serial }}
           sketch-paths: |
             ${{ env.job-sketch-paths }}
           platforms: |
