--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -231,52 +231,54 @@ jobs:
       - name: Build sketch-paths >= 8kb
         if: ${{ matrix.device.available-flash-kB >= 7.5 }}
         env:
-          job-sketch-paths: |
+          job_sketch_paths: |
             ${{ env.available-flash-8kB-sketch-paths }}
             ${{ env.available-flash-4kB-sketch-paths }}
             ${{ env.available-flash-2kB-sketch-paths }}
         run: >
-          echo "sketch paths: $job-sketch-paths"
+          echo "sketch paths: $job_sketch_paths"
 
       - name: Build sketch-paths >= 4kb
         if: ${{ matrix.device.available-flash-kB >= 4 }}
         env:
-          job-sketch-paths: |
+          job_sketch_paths: |
             ${{ env.available-flash-4kB-sketch-paths }}
             ${{ env.available-flash-2kB-sketch-paths }}
         run: >
-          echo "sketch paths: $job-sketch-paths"
+          echo "sketch paths: $job_sketch_paths"
 
       - name: Build sketch-paths >= 2kb
         if: ${{ matrix.device.available-flash-kB >= 4 }}
         env:
-          job-sketch-paths: |
+          job_sketch_paths: |
             ${{ env.available-flash-2kB-sketch-paths }}
         run: >
-          echo "sketch paths: $job-sketch-paths"
+          echo "sketch paths: $job_sketch_paths"
 
       - name: Build fqbn with soft serial
         if: ${{ matrix.soft-serial != 0 }}
         env:
-          job-fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m,${{ matrix.soft-serial }}
+          job_fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m,${{ matrix.soft-serial }}
         run: >
-          echo "fqbn: ${job-fqbn}"
+          echo "fqbn: ${job_fqbn}"
 
       - name: Build fqbn without soft serial
         if: ${{ matrix.soft-serial == 0}}
         env:
-          job-fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m
+          job_fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m
         run: >
-           echo "fqbn: ${job-fqbn}"
+           echo "fqbn: ${job_fqbn}"
 
       # See: https://github.com/arduino/compile-sketches/README.md
+
+      - name:
 
       - name: Compile examples (all default)
         uses: arduino/compile-sketches@main
         with:
-          fqbn: ${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m,${{ matrix.soft-serial }}
+          fqbn: ${{ env.job_fqbn }}
           sketch-paths: |
-            ${{ env.job-sketch-paths }}
+            ${{ env.job_sketch_paths }}
           platforms: |
             # Install ATTinyCore via Boards Manager for the toolchain
             - source-url: http://drazzy.com/package_drazzy.com_index.json
