--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -257,13 +257,13 @@ jobs:
 
       - name: Build fqbn with soft serial
         if: ${{ matrix.soft-serial != 0 }}
-        run: >
+        run: |
           export job_fqbn=${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m,${{ matrix.soft-serial }}
           echo "::set-env name=job_fqbn::$job_fqbn"
 
       - name: Build fqbn without soft serial
         if: ${{ matrix.soft-serial == 0}}
-        run: >
+        run: |
           export job_fqbn=${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m
           echo "::set-env name=job_fqbn::$job_fqbn"
 
