--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -36,14 +36,14 @@ jobs:
         - avr/libraries/EEPROM/examples/eeprom_put
         - avr/libraries/EEPROM/examples/eeprom_read
         - avr/libraries/Wire/examples/digital_potentiometer
-        - avr/libraries/megaTinyCore/examples/ModernRevSer
+        # - avr/libraries/megaTinyCore/examples/ModernRevSer
         - avr/libraries/SoftwareSerial/examples/SoftwareSerialExample
         - avr/libraries/tinyNeoPixel/examples/buttoncycler
         - avr/libraries/tinyNeoPixel/examples/simple
         - avr/libraries/tinyNeoPixel/examples/strandtest
         - avr/libraries/tinyNeoPixel_Static/examples/buttoncycler
         - avr/libraries/tinyNeoPixel_Static/examples/strandtest
-        - avr/extras/ci/test_sketches_4k/serial_test
+        # - avr/extras/ci/test_sketches_4k/serial_test
       available-flash-8kB-sketch-paths: |
         - avr/libraries/SPI/examples/BarometricPressureSensor
         - avr/libraries/SoftwareSerial/examples/TwoPortReceive
