--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -172,9 +172,9 @@ jobs:
           #     - name: attiny828
           #       available-flash-kB: 8
           - device:
-              - name: attinyx4:chip=84
-                available-flash-kB: 8
-            soft-serial:
+            - name: attinyx4:chip=84
+              available-flash-kB: 8
+            # soft-serial:
           # - soft-serial: ""
           #   device:
           #     - name: attinyx4:chip=44
